Leaflet map with markers & curved lines

--- a/index.html
+++ b/index.html
@@ -4,11 +4,31 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" type="text/css" href="css/style.css>">
-    <script>src="script.js"</script>
-    <title>Document</title>
+    <title>Physcial Network Trace</title>
+
+    <!-- leaflet CSS/JS -->
+    <link rel="stylesheet" href="https://unpkg.com/leaflet/dist/leaflet.css" />
+    <script src="https://unpkg.com/leaflet/dist/leaflet.js"></script>
+    
+    <!-- leaflet.curve library -->
+    <script src="leaflet/leaflet.curve.js"></script>
+
+    <!-- my CSS/JS -->
+    <link rel="stylesheet" href = "css/style.css"/>
+    <script src="script.js"></script>
+
 </head>
 <body>
-    
+    <header class="header-container">
+        <div class="header-title">
+            <h1>Physical Network Trace</h1>
+            <h2>Leah Loeser</h2>
+        </div>
+    </header>
+
+    <div class="map-container">
+        <div id="map"></div>
+    </div>
+
 </body>
 </html>
