--- a/index.html
+++ b/index.html
@@ -17,17 +17,26 @@
     <link rel="stylesheet" href = "css/style.css"/>
     <script src="script.js"></script>
 
+    <!-- google fonts -->
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Inter:wght@200;500&family=Open+Sans:ital,wght@0,300;0,400;0,500;0,600;0,700;0,800;1,300&display=swap" rel="stylesheet">
+
 </head>
 <body>
-    <header class="header-container">
-        <div class="header-title">
-            <h1>Physical Network Trace</h1>
-            <h2>Leah Loeser</h2>
-        </div>
-    </header>
+
+    <div class="header-title">
+        <h1>Physical Network Trace</h1>
+        <h2>Leah Loeser | hellotech.com</h2>
+    </div>
+
 
     <div class="map-container">
         <div id="map"></div>
+    </div>
+
+    <div>
+        <div><img src="images/key.png" style="width:225px;"></div>
     </div>
 
 </body>
